--- a/index.html
+++ b/index.html
@@ -1,17 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Form</title>
+< DOCTYPE html>
+2
+3
+shtml lang="en">
+shead>
+‹meta charset=*UTF-8">
+‹meta name="viewport"
+content="width=device-width, initial-scale=1.0">
+<|•- Google Tag Manager ••>
+7
+8
+9
+10
+11
+12
+13
+14
+15
+«script>(function (w,d,s, l,i) (wil]=w[l]||[l:w[Ll.push(f'gtm.start':
+new Date() getTime() ,event: 'gtm.js'});var f=d.getElementsByTagName(s) [0],
+j=d. createElement (s) ,dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+https://www.googletagmanager.com/gtm.js?id=*+i+dl;f.parentNode.insertBefore(j.f):
+7) (window, document, 'script', 'dataLayer'. 'GTM-NCTM3DV7*);</script> <! -- End Google Tag Manager --> <link rel="stylesheet" href="style.css">
+‹title>Form</title>
+<-- Meta Pixel Code • > «script» |function(f,b,e,v,n,t,s) {if(f.fbq)return;n=f.fbq=function()(n.callMethod? n.
+cal Method. apply(n, arguments) :n.queue.push(arguments)}: if(If._fbq)f._fbq=n;n.push=n;n. loaded=10;n.version='2.0'; n.
+queue=ll:t=b.createElement (e);t.async=!0; t.src=v;S=b.getElementsByTagName(e) [0]; s-parentNode.insertBefore(t,s)}
+(window, document, ' script', 'https://connect.facebook.net/en US/fbevents.js'); fbg('init', '1158677758890422'): fbq ('track', 'PageView'): </script> ‹noscript><img height="1* width="1" style="display:none" src="https://www.facebook. com/tr?id=1158677758890422&ev=PageView&noscript=1" /></noscript> <-- End Meta Pixel Code -→>
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
 </head>
-<body>
-    <form class="contact-form">
-        <input class="contact-name" type="name" placeholder="Your name *"> 
-        <input class="contact-email" type="email" placeholder="Your E-Mail *">
-        <input class="contact-number" type="number" placeholder="Your phone number *">
-     </div>
-    <button class="contact-button">Відправити</button>
-</body>
-</html>
+‹body>
+<! - - Google Tag Manager (noscript)
+«noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCTM3DV7"
+height="0" width="0"
+style="display:none;visibility:hidden"></iframe></noscript>
+<! -- End Google Tag Manager (noscript)
+«form class="contact-form">
+<input class="contact -name"
+type="name" placeholder="Your name
+*">
+<input class="contact-email"
+type="email" placeholder="Your E-Mail **>
+‹input class="contact-number" type="number" placeholder="Your phone number *">
+</div>
+‹button class="contact-button">Відправити</button>
+</body> </html>
